# open-ephys-python-tools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-tests.yml
open_ephys/analysis/: README.md  recording.py  recordnode.py  session.py
open_ephys/analysis/formats/: BinaryRecording.py  KwikRecording.py  NwbRecording.py  OpenEphysRecording.py  __init__.py
open_ephys/analysis/formats/helpers/: __init__.py  oe_fast_loader.py
open_ephys/control/: README.md  __init__.py  http_server.py  network_control.py  network_events_console.py
open_ephys/streaming/: README.md  event_listener.py
src/open_ephys/analysis/: README.md  __init__.py  recording.py  recordnode.py  session.py  utils.py
src/open_ephys/analysis/formats/: BinaryRecording.py  NwbRecording.py  OpenEphysRecording.py  __init__.py  oebin_schema.json
src/open_ephys/control/: README.md  __init__.py  http_server.py  network_control.py
src/open_ephys/streaming/: README.md  __init__.py  event_listener.py
tests/: test_binary_format.py  test_nwb_format.py  test_openephys_format.py
tests/data/v0.6.7_Binary/Record Node 101/: settings.xml
tests/data/v0.6.7_Binary/Record Node 105/: settings.xml
tests/data/v0.6.7_NWB/Record Node 105/: settings.xml
tests/data/v0.6.7_OpenEphys/Record Node 101/: 100_example-data.events  100_example-data.timestamps  100_example-data_CH1.continuous  100_example-data_CH10.continuous  100_example-data_CH11.continuous  100_example-data_CH12.continuous  100_example-data_CH13.continuous  100_example-data_CH14.continuous  100_example-data_CH15.continuous  100_example-data_CH16.continuous  100_example-data_CH2.continuous  100_example-data_CH3.continuous  100_example-data_CH4.continuous  100_example-data_CH5.continuous  100_example-data_CH6.continuous  100_example-data_CH7.continuous  100_example-data_CH8.continuous  100_example-data_CH9.continuous  messages.events  settings.xml  structure.openephys
tests/data/v0.6.7_OpenEphys/Record Node 105/: 100_example-data_CH1.continuous  100_example-data_CH10.continuous  100_example-data_CH11.continuous  100_example-data_CH12.continuous  100_example-data_CH13.continuous  100_example-data_CH14.continuous  100_example-data_CH2.continuous  (+19 more)
(+55 files in other folders)
